--- a/javascript1.html
+++ b/javascript1.html
@@ -9,6 +9,7 @@
 <body>
 
     
-        <script src="./scripts.js"></script>
+      <!---  <script src="./scripts.js"></script>     -->
+      <script src="./variaveis.js"></script>
 </body>
 </html>
