--- a/javascript1.html
+++ b/javascript1.html
@@ -9,7 +9,8 @@
 <body>
 
     
-      <!---  <script src="./scripts.js"></script>     -->
-      <script src="./variaveis.js"></script>
+      <!---  <script src="./scripts.js"></script> --->
+      <script src="./praticando-variaveis.js"></script>  
+        
 </body>
 </html>
